--- a/gui/style.css
+++ b/gui/style.css
@@ -12,6 +12,10 @@ body,html{
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: 10% 80% 10%;
 }
+
+/*
+* Header
+*/
 header{
     color: #fff;
     display: flex;
@@ -47,9 +51,15 @@ header ul li span{
     vertical-align: middle;
 }
 
+/*
+* Work Space
+*/
 .work-space{
     grid-column: span 12;
-    padding: 40px;
+    padding-left: 40px;
+    padding-right: 40px;
+    padding-bottom: 10px;
+    padding-top: 10px;
 }
 .work-space .question{
     width: 100%;
@@ -147,6 +157,9 @@ header ul li span{
     cursor: pointer;
 }
 
+/*
+* Footer
+*/
 footer{
     grid-column: span 12;
     background-color: chocolate;
@@ -176,12 +189,61 @@ footer ul{
 footer ul li{
     height: 100%;
     line-height: 100%;
-    color: white;
+    color: wheat;
     margin-right: 20px;
     cursor: pointer;
     font-size: small;
 }
 
+/*
+* Editor
+*/
+.editor-panel{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.editor-panel h2{
+    font-size: large;
+}
+.editor-panel .editor-input{
+    height: 100%;
+    border-radius: 10px;
+    font-weight: bolder;
+    line-height: 1.5em;
+    background-color: #eee;
+}
+.editor-panel .editor-buttons{
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+.editor-panel .editor-buttons .editor-submit{
+    background-color: chocolate;
+    color: white;
+}
+.editor-panel .editor-buttons .editor-return{
+    background-color: white;
+    color: chocolate;
+    border: 1px solid chocolate;
+}
+.editor-panel button{
+    margin-left: 20px;
+    width: 200px;
+    border-radius: 5px;
+    border:0px;
+    margin-top: 10px;
+    font-size: small;
+    padding: 4px;
+    cursor: pointer;
+    align-self: flex-end;
+} 
+
+/*
+* Modal
+*/
 .modal{
     position:absolute;
     width: 100%;
